--- a/style.css
+++ b/style.css
@@ -18,4 +18,18 @@ button {
 input[type=number] {
     width: 100px;
     padding: 5px;
+#handRankings {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.hand {
+    background-color: #006400;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+    width: 180px;
+    text-align: center;
 }
