--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ button {
 input[type=number] {
     width: 100px;
     padding: 5px;
+}
+
 #handRankings {
     display: flex;
     flex-wrap: wrap;
