--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ button {
     font-size: 16px;
 }
 
-input[type=number], input[type=text] {
-    width: 100px;
+input[type=number], input[type=text], select {
     padding: 5px;
+    margin: 5px;
 }
 
 .cards {
