--- a/style.css
+++ b/style.css
@@ -31,3 +31,15 @@ input[type=number], input[type=text], select {
     width: 180px;
     text-align: center;
 }
+
+.card {
+    display: inline-block;
+    border: 1px solid white;
+    padding: 5px 8px;
+    margin: 2px;
+    border-radius: 4px;
+    background-color: #006400;
+}
+
+.card.red { color: red; }
+.card.black { color: white; }
